--- a/index.html
+++ b/index.html
@@ -4,9 +4,90 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Find Local Concerts</title>
+    <link rel="stylesheet" href="assets/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Kelley's Test</h1>
+
+    <div class="nav-bar">
+        <a href="" class="nav-bar-el">Link 1</a>
+        <a href="" class="nav-bar-el">Link 2</a>
+        <a href="" class="nav-bar-el">Link 3</a>
+        <a href="" class="nav-bar-el">Link 4</a>
+    </div>
+
+    <div class="box-holder">
+        <div class="box-1">
+            <div class="artist-name">
+                <h1>Placeholder Text</h1>
+            </div>
+            <div class="search-bar">
+                <input type="text" placeholder="Enter Search Here :)">
+            </div>
+        </div>
+
+        <div class=box-2>
+            <div class="youtube">
+                <h1>Placeholder text</h1>
+            </div>
+            <div class="info">
+                <h1>Placeholder text</h1>
+            </div>
+        </div>
+    </div>
+
+    <script src="assets/script.js"></script>
 </body>
 </html>
+
+
+<!-- CSS file
+
+.nav-bar {
+    background-color: #333;
+    overflow: hidden;
+}
+
+.nav-bar-el {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.nav-bar-el:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.box-holder {
+    padding-top: 10px;
+    display: flex;
+    justify-content: center;
+}
+
+.box-1 {
+    border: 1px solid black;
+    width: 50%;
+    padding: 10px;
+}
+
+.box-2 {
+    border: 1px solid black;
+    width: 50%;
+}
+
+.artist-name, .search-bar {
+    padding-left: 10%;
+}
+
+.youtube, .info {
+    border: 1px solid black;
+    padding-left: 10%;
+    height: 200%;
+}
+
+-->
