some minor tweaks to how things are positioned on the page

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 </form>
     
     <div class="box-holder row">
-    <div class="box-1 col-md-6">
+    <div class="box-1 col-md-6 text-center">
         <div class="youtube" id="player">
             <h1>Youtube Video</h1>
         </div>
         </div>
-        <div class="box-2 col-md-6">
+        <div class="box-2 col-md-6 text-center">
+            <h1>Next Upcoming Show</h1>
             <div id="event" class="info">
-                <h1>Next Upcoming Show</h1>
           
         </div>
     </div>
