--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
     
     <div class="box-holder row">
     <div class="box-1 col-md-6 text-center">
+        <h1>Youtube Video</h1>
         <div class="youtube" id="player">
-            <h1>Youtube Video</h1>
+            <!-- Video Appends Here -->
         </div>
         </div>
         <div class="box-2 col-md-6 text-center">
             <h1>Next Upcoming Show</h1>
             <div id="event" class="info">
-          
+          <!-- Event Info Appends Here -->
         </div>
     </div>
 </div> 
