--- a/index.html
+++ b/index.html
@@ -1,44 +1,51 @@
-
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Find Local Concerts</title>
 <link rel="stylesheet" href="./assets/styles.css">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+
 </head>
+
 <body>
 
 
-<div class="nav-bar">
-    <a href="" class="nav-bar-el">Link 1</a>
-    <a href="" class="nav-bar-el">Link 2</a>
-    <a href="" class="nav-bar-el">Link 3</a>
-    <a href="" class="nav-bar-el">Link 4</a>
-</div>
+    <div class="nav-bar">
+        <a href="" class="nav-bar-el">Link 1</a>
+        <a href="" class="nav-bar-el">Link 2</a>
+        <a href="" class="nav-bar-el">Link 3</a>
+        <a href="" class="nav-bar-el">Link 4</a>
+    </div>
 
-<form id="user-form" class="card-body text-center">
-    <label class="form-label" for="artistname">Artist/Band Name</label>
-    <input name="search" id="search" type="text" autofocus="true" class="form-input" />
-    <button type="submit" id="find" class="btn btn-primary">Find</button>
-</form>
-    
+    <form id="user-form" class="card-body text-center">
+        <label class="form-label" for="artistname"></label>
+        <input name="search" id="search" type="text" autofocus="true" class="form-input"  placeholder="Artist / Band Name"/>
+        <button type="submit" id="find" class="btn btn-primary">Find</button>
+    </form>
+
     <div class="box-holder row">
-    <div class="box-1 col-md-6 text-center">
-        <h1>Youtube Video</h1>
-        <div class="youtube" id="player">
-            <!-- Video Appends Here -->
-        </div>
+        <div class="box-1 col-md-6 text-center">
+            <h1>Youtube Video</h1>
+            <div class="youtube" id="player">
+                <!-- Video Appends Here -->
+            </div>
         </div>
         <div class="box-2 col-md-6 text-center">
             <h1>Next Upcoming Show</h1>
             <div id="event" class="info">
-          <!-- Event Info Appends Here -->
+                <!-- Event Info Appends Here -->
+            </div>
         </div>
     </div>
-</div> 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="./assets/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
+        integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="./assets/main.js"></script>
 </body>
-</html> 
 
+</html>
