more css and html adjustments

--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
 
 
     <div class="nav-bar">
-        <a href="" class="nav-bar-el">Link 1</a>
-        <a href="" class="nav-bar-el">Link 2</a>
-        <a href="" class="nav-bar-el">Link 3</a>
-        <a href="" class="nav-bar-el">Link 4</a>
+       <h1 class = "title is-1 style = "color:white">REGARDING CONCERTS</h1>
     </div>
 
     <form id="user-form" class="card-body text-center">
