changed title and fixed title font

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
     <div class="nav-bar">
-       <h1 class = " text-white title text-center" >REGARDING CONCERTS</h1>
+       <h1 class = " text-white title text-center" >SONG STUB</h1>
        
     </div>
 
